fix(market): make provider registry thread-safe
Refs: #294